--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   max-width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   color: #000;
   font-size: 1rem;
   display: flex;
