--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,11 +4,11 @@
   margin: 0 auto;
   max-width: 1920px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   font-weight: normal;
 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: start;
 }
